package com.autonomous.api.grpc

import io.grpc.stub.StreamObserver
import net.devh.boot.grpc.server.service.GrpcService

@GrpcService
class ReplanningServiceImpl : ReplanningServiceGrpc.ReplanningServiceImplBase() {

    override fun requestReplanning(request: RequestReplanningRequest, responseObserver: StreamObserver<RequestReplanningResponse>) {
        // Implementation
        val response = RequestReplanningResponse.newBuilder()
            .setReplanningId("REPLAN-" + System.currentTimeMillis())
            .setStatus("REQUESTED")
            .setMessage("Replanning requested")
            .setRequestedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun getReplanningStatus(request: GetReplanningStatusRequest, responseObserver: StreamObserver<GetReplanningStatusResponse>) {
        // Implementation
        val response = GetReplanningStatusResponse.newBuilder()
            .setReplanningId(request.replanningId)
            .setMissionId("MISSION-001")
            .setStatus("IN_PROGRESS")
            .setProgress("50%")
            .setMessage("Replanning in progress")
            .setRequestedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .setStartedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun cancelReplanning(request: CancelReplanningRequest, responseObserver: StreamObserver<CancelReplanningResponse>) {
        // Implementation
        val response = CancelReplanningResponse.newBuilder()
            .setReplanningId(request.replanningId)
            .setStatus("CANCELLED")
            .setMessage("Replanning cancelled")
            .setCancelledAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }
}